crates/fai-tests/tests/fixtures/errors/OccursCheck.fai
module OccursCheck

// Applying a value to itself forces an infinite type.
//~ ERROR FAI3002
let omega x = x x
